# VFX_ProdTracker

./: .gitignore  Design_Doc.md  README.md  Requirements_Doc.md  docker-compose.yml  pyproject.toml  tracktor.db
docs/source/: conf.py  index.rst
docs/source/tik_tracktor/: index.rst  installer.rst  login.rst  main.rst
docs/source/tracktor_server/: index.rst  notes_table.rst  shots_table.rst  users_table.rst
tik_tracktor/: __init__.py  installer.py  tracktor_api.py
tik_tracktor/tracktor/: main.py  ui_extension.py  ui_tracktor.py
tik_tracktor/tracktor/ui/: login.py
tik_tracktor/ui_tracktor/: ui_tracktor.py
tracktor/: Dockerfile  package-lock.json  package.json
tracktor/src/: App.css  App.jsx  index.css
tracktor/src/components/: Breadcrumbs.jsx  Button.jsx  Navbar.jsx  Popup.jsx  StatusListbox.jsx  Table.jsx  Textbox.jsx
tracktor_server/: .dockerignore  :memory  Dockerfile  assets_db_map.py  assets_table.py  db_map.py  main.py  notes_db_map.py  notes_table.py  projects.db  projects_db_map.py  projects_table.py  pyproject.toml  shots_db_map.py  shots_table.py  tracktor.db  usersProjects_db_map.py  usersProjects_table.py  users_db_map.py  users_table.py
tracktor_server/tests/: old_db_mapper.py  test_assets.py  test_assets_db_mapper.py  test_db_mapper.py  test_main.py  test_notes.py  test_notes_db_mapper.py  test_projects.py  test_projects_db_mapper.py  test_shots.py  test_shots_db_mapper.py  test_users.py  test_usersProjects.py  test_usersProjects_db_mapper.py  test_users_db_mapper.py  tracktor.db
tracktor_server/tracktor-venv/: pip-selfcheck.json
(+10 files in other folders)
