[project]
name = "vfx-prodtracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "pyside2",
]

[tool.uv.workspace]
members = ["tracktor_server"]

[tool.uv]
required-environments = ['platform_system == "Windows"']
